@@ -35,10 +35,6 @@ udev expects its main configuration file at
 Specifies where to place the device nodes in the filesystem. The default value is 
 \fI/dev\fR.
 .TP
-\fBudev_db\fR
-The name and location of the udev database. The default value is 
-\fI/dev/.udevdb\fR.
-.TP
 \fBudev_rules\fR
 The name of the udev rules file or directory to look for files with the suffix 
 \fI.rules\fR. Multiple rule files are read in lexical order. The default value is 
